<resources>
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="welcome">Welcome</string>
    <string name="vs">V.S.</string>
    <string name="instructions_select_rock_paper_or_scissors_to_play">Instructions: select rock, paper or scissors to play.</string>
    <string name="your_all_time_statistics">Your all time statistics</string>
    <string name="lose">Computer wins!</string>
    <string name="draw">Draw</string>
    <string name="win">You win!</string>
    <string name="textview">TextView</string>
    <string name="score">Score</string>
    <string name="v_s">V.S.</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
</resources>
