<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginLeft="177dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp"
            android:text="@string/welcome"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvInstructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"
            android:text="@string/instructions_select_rock_paper_or_scissors_to_play"
            app:layout_constraintBottom_toTopOf="@+id/tvStatistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/tvStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginLeft="135dp"
            android:layout_marginEnd="135dp"
            android:layout_marginRight="135dp"
            android:text="@string/your_all_time_statistics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginLeft="176dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp"
            android:layout_marginBottom="68dp"
            android:text="@string/lose"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvVs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

        <TextView
            android:id="@+id/tvVs"
            android:layout_width="36dp"
            android:layout_height="27dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/vs"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52"
            tools:text="V.S." />

        <ImageButton
            android:id="@+id/ibRock"
            android:layout_width="108dp"
            android:layout_height="76dp"
            android:background="#009688"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:srcCompat="@drawable/rock"
            tools:srcCompat="@drawable/rock" />

        <ImageButton
            android:id="@+id/ibPaper"
            android:layout_width="108dp"
            android:layout_height="76dp"
            android:background="#009688"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:srcCompat="@drawable/paper"
            tools:srcCompat="@drawable/paper" />

        <ImageButton
            android:id="@+id/ibScissors"
            android:layout_width="108dp"
            android:layout_height="76dp"
            android:background="#009688"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:srcCompat="@drawable/scissors"
            tools:srcCompat="@drawable/scissors" />

        <ImageView
            android:id="@+id/ivComputer"
            android:layout_width="108dp"
            android:layout_height="76dp"
            android:layout_marginStart="47dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="119dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="236dp"
            android:background="#027167"
            app:layout_constraintBottom_toTopOf="@+id/ibRock"
            app:layout_constraintEnd_toStartOf="@+id/tvVs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatistics"
            app:srcCompat="@drawable/paper" />

        <ImageView
            android:id="@+id/ivPlayer"
            android:layout_width="108dp"
            android:layout_height="76dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"
            android:layout_marginBottom="236dp"
            android:background="#01655C"
            app:layout_constraintBottom_toTopOf="@+id/ibPaper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvVs"
            app:layout_constraintTop_toBottomOf="@+id/tvStatistics"
            app:srcCompat="@drawable/rock" />

    </androidx.constraintlayout.widget.ConstraintLayout>